--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
-sudo: false
 language: ruby
+sudo: false
 rvm:
-  - 2.3.3
-before_install: gem install bundler -v 1.14.6
+  - 2.4.2
+branches:
+  only:
+    - master
+script:
+  - bundle exec rspec
+  #- bundle exec rubocop
