Add spec coverage with simplecov and code climate

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=dfd84bd4971ce33364328e989da246eff3a0346e548bd51db423d0339c75c32d
 language: ruby
 sudo: false
 rvm:
@@ -5,6 +8,12 @@ rvm:
 branches:
   only:
     - master
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script:
   - bundle exec rspec
   - bundle exec rubocop
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
