--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,5 +7,8 @@ Metrics/LineLength:
   Enabled: false
 Metrics/BlockLength:
   Enabled: false
+Layout/SpaceBeforeBlockBraces:
+  EnforcedStyle: space
+  EnforcedStyleForEmptyBraces: space
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
