--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ Metrics/LineLength:
   Enabled: false
 Metrics/BlockLength:
   Enabled: false
+Metrics/AbcSize:
+  Enabled: false
 Layout/SpaceBeforeBlockBraces:
   EnforcedStyle: space
   EnforcedStyleForEmptyBraces: space
