--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,3 +14,5 @@ Layout/SpaceBeforeBlockBraces:
   EnforcedStyleForEmptyBraces: space
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
+Naming/UncommunicativeMethodParamName:
+  Enabled: false
