Add tables_map_path to crystalball.yml

--- a/spec/fixtures/crystalball.yml
+++ b/spec/fixtures/crystalball.yml
@@ -1,14 +1,14 @@
-# Custom path to your maps folder. Default: `tmp/execution_maps`
-map_path: 'execution_map.yml'
+# Custom path to your execution map. Can be file or folder. Default: `tmp/execution_map.yml`
+execution_map_path: 'execution_map.yml'
 # Maximum amount of examples which will be run automatically. Default: no limit.
 examples_limit: 1
 #
-# Custom predictor class to use. Default: 'Crystalball::Predictor`
-# predictor_class_name: 'StandardPredictor'
+# Custom prediction builder class to use. Default: 'Crystalball::RSpec::StandardPredictionBuilder'
+# prediction_builder_class_name: 'Crystalball::RSpec::StandardPredictionBuilder'
 # #
 # Set of requires. Usually used to require custom predictor class file. Default: []
 # requires:
-#   - './standard_predictor'
+#   - './standard_prediction_builder'
 #
 # Custom map expiration period in seconds. 0 = Disable expiration check. Default: 86400 (1 day)
 # map_expiration_period : 0
