Add missed spec for ParserStrategy::Processor

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,5 @@ Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
 Naming/UncommunicativeMethodParamName:
   Enabled: false
+Lint/SplatKeywordArguments:
+  Enabled: false
