Move out project docs to docs folder

--- a/spec/fixtures/crystalball.yml
+++ b/spec/fixtures/crystalball.yml
@@ -13,5 +13,11 @@ examples_limit: 1
 # Custom map expiration period in seconds. 0 = Disable expiration check. Default: 86400 (1 day)
 # map_expiration_period : 0
 #
-# Runner class
+# Custom RSpec runner class to use. Default: 'Crystalball::RSpec::Runner'
 # runner_class_name: 'RunnerClass'
+#
+# "From" value for `git diff` command. default: 'HEAD'
+# diff_from: 'origin/master'
+#
+# "To" value for `git diff` command. default: nil
+# diff_to: 'HEAD'
