Dont show focus\filter options wnen running Crystalball prediction

--- a/spec/fixtures/crystalball.yml
+++ b/spec/fixtures/crystalball.yml
@@ -1,6 +1,7 @@
 # Custom path to your execution map. Can be file or folder. Default: `tmp/execution_map.yml`
 execution_map_path: 'execution_map.yml'
 # Maximum amount of examples which will be run automatically. Default: no limit.
+# If prediction size is over the limit Crystalball will prune prediction to fit the limit.
 examples_limit: 1
 #
 # Custom prediction builder class to use. Default: 'Crystalball::RSpec::StandardPredictionBuilder'
