Disable Lint/AmbiguousBlockAssociation cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,3 +20,5 @@ Lint/SplatKeywordArguments:
   Enabled: false
 Style/MethodMissingSuper:
   Enabled: false
+Lint/AmbiguousBlockAssociation:
+  Enabled: false
