Introduce MapDataSource concept

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,5 +20,7 @@ Style/MethodMissingSuper:
   Enabled: false
 Lint/AmbiguousBlockAssociation:
   Enabled: false
+Lint/SplatKeywordArguments:
+  Enabled: false
 Style/DoubleNegation:
   Enabled: false
